[package]
name = "joy_msg_router_rs"
version = "0.1.0"
authors = ["Masahiro Wada<argon.argon.argon@gmail.com>"]
edition = "2024"

[[bin]]
name = "joy_msg_router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
safe_drive = "0.4"
std_msgs = { path = "/tmp/safe_drive_tutorial/pubsub/std_msgs" }

[package.metadata.ros]
msg = ["std_msgs"]
msg_dir = "/tmp/safe_drive_tutorial/pubsub"
safe_drive_version = "0.4"
